# golem_campose

./: .gitignore  README.md
campose_msgs/: CMakeLists.txt  package.xml
campose_msgs/msg/: FramePoses.msg  Keypoint.msg  Person.msg  PersonAngles.msg  PersonPose.msg
golem_campose/: CMakeLists.txt  package.xml
golem_campose/include/golem_campose/: FlycaptureProducer.hpp  RostopicProducer.hpp  kinect_server.hpp  pc_serializer.hpp
golem_campose/launch/: debug.sh  person.launch  person_debug.launch  person_webcam.launch
golem_campose/msg/: PersonPose.msg  PoseFrame.msg
golem_campose/src/: FlycaptureProducer.cpp  RostopicProducer.cpp  flycap_publisher_node.cpp  golem_campose_node.cpp  kinect_server.cpp  kinect_server_node.cpp  openpose_collector_node.cpp  pc_serializer.cpp  person_finder.cpp
