<?xml version="1.0"?>
<package format="2">
  <name>campose_msgs</name>
  <version>0.0.0</version>
  <description>The campose_msgs package</description>

  <maintainer email="ricardo.delfin.garcia@gmail.com">Ricardo Delfin Garcia</maintainer>

  <license>GPLv3</license>

  <author email="ricardo.delfin.garcia@gmail.com">Ricardo Delfin Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
