<?xml version="1.0"?>
<package format="2">
  <name>golem_campose</name>
  <version>0.0.0</version>
  <description>The golem_campose package</description>

  <maintainer email="ricardo.delfin.garcia@gmail.com">Ricardo Delfin Garcia</maintainer>
  
  <license>GPLv3</license>

  <author email="ricardo.delfin.garcia@gmail.com">Ricardo Delfin Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>campose_msgs</depend>


  <export>

  </export>
</package>
